# procon31

./: README.md  procon31.sh
algo/src/: CMakeLists.txt  solver.cpp
algo/src/playMatch/: CMakeLists.txt  playMatch.cpp
algo/src/procon31App/: CMakeLists.txt  procon31.cpp
algo/src/solver/: CMakeLists.txt  areaAndNdfs.cpp  classes.hpp  constant.hpp  enumeratePath.cpp  io.cpp  sa_tile_set.cpp  solver.cpp  utility.cpp  utility.hpp
data/0/: fieldInfo  gameInfo
data/11235800/: fieldInfo  gameInfo
data/11235801/: fieldInfo  gameInfo
data/11235802/: fieldInfo  gameInfo
data/11235803/: fieldInfo  gameInfo
data/11235804/: fieldInfo  gameInfo
data/11235805/: fieldInfo  gameInfo
data/11235806/: fieldInfo  gameInfo
data/11235807/: fieldInfo  gameInfo
data/11235808/: fieldInfo  gameInfo
data/11235809/: fieldInfo  gameInfo
data/11235810/: fieldInfo  gameInfo
data/11235811/: fieldInfo  gameInfo
data/11235812/: fieldInfo  gameInfo
data/11235813/: fieldInfo  gameInfo
data/11235814/: fieldInfo  gameInfo
data/11235815/: fieldInfo  gameInfo
data/11235816/: fieldInfo  gameInfo
data/11235817/: fieldInfo  gameInfo
utility/: comms.py  enumMatchID.py  initial.py  killPlayMatch.sh  makeFieldInfo.py  makeGameInfo.py
visualizer/src/simpleServer/: compile.sh  makefile  simpleServer.cpp
visualizer/src/visualizer/: Main.cpp  action.h  agent.h  constant.h  field.cpp  field.h  game.cpp  game.h  team.h
